# BadaniaOperacyjne

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt  dokumentacja.typ  engine.c  engine.h  grid_search.py  main.c  parser.py  sprawozdanie.typ  visualize.py
cover_experiments/: grid_search.py  plot.py
diagonal_experiments/: grid_search.py  patience_plot.py
